--- a/supervisord.conf
+++ b/supervisord.conf
@@ -40,6 +40,11 @@ command=/usr/sbin/nginx
 stdout_events_enabled=true
 stderr_events_enabled=true
 
+[program:ssh]
+command=/usr/sbin/sshd -D
+stdout_events_enabled=true
+stderr_events_enabled=true
+
 [eventlistener:stdout]
 command = supervisor_stdout
 buffer_size = 100
