More readme and Magento conf

--- a/magento-site.conf
+++ b/magento-site.conf
@@ -41,10 +41,11 @@ location ~ .php$ { ## Execute PHP scripts
 
         expires        off; ## Do not cache dynamic content
         fastcgi_pass   unix:/var/run/php5-fpm.sock;
-        fastcgi_param  HTTPS $fastcgi_https;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  MAGE_RUN_CODE default; ## Store code is defined in administration > Configuration > Manage Stores
         fastcgi_param  MAGE_RUN_TYPE store;
+        # Enabling causes failure on all warnings, so might not work too well.
+#        fastcgi_param MAGE_IS_DEVELOPER_MODE true;
         include        fastcgi_params;
         fastcgi_read_timeout 450;
 }
