--- a/drupal-site.conf
+++ b/drupal-site.conf
@@ -68,7 +68,7 @@ server {
 #        fastcgi_param SCRIPT_FILENAME $request_filename;
         fastcgi_intercept_errors on;
 
-    		fastcgi_pass unix:/var/run/php5-fpm.sock;
+    		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
     		fastcgi_index index.php;
     		include fastcgi_params;
     }
