--- a/livehelperchat-site.conf
+++ b/livehelperchat-site.conf
@@ -6,7 +6,7 @@ server {
 
   location ~* (^(?!(?:(?!(php)).)*/(albums|bin|var|lib|cache|doc|settings|pos|modules)/).*?(index\.php|upgrade\.php|testi\.php)$) {
           include        fastcgi_params;
-          fastcgi_pass unix:/var/run/php5-fpm.sock;
+          fastcgi_pass unix:/run/php/php7.0-fpm.sock;
           fastcgi_param  PATH_INFO          $query_string;
           fastcgi_param  SCRIPT_FILENAME /wwwroot/current/$fastcgi_script_name;
        }
