--- a/magento-site.conf
+++ b/magento-site.conf
@@ -40,7 +40,7 @@ location ~ .php$ { ## Execute PHP scripts
         if (!-e $request_filename) { rewrite / /index.php last; } ## Catch 404s that try_files miss
 
         expires        off; ## Do not cache dynamic content
-        fastcgi_pass   unix:/var/run/php5-fpm.sock;
+        fastcgi_pass   unix:/run/php/php7.0-fpm.sock;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  MAGE_RUN_CODE default; ## Store code is defined in administration > Configuration > Manage Stores
         fastcgi_param  MAGE_RUN_TYPE store;
