--- a/drupal-site.conf
+++ b/drupal-site.conf
@@ -75,7 +75,7 @@ server {
 
     # Fighting with Styles? This little gem is amazing.
     # location ~ ^/sites/.*/files/imagecache/ { # For Drupal <= 6
-    location ~ ^/sites/.*/files/styles/ { # For Drpal >= 7
+    location ~ /sites/.*/files/styles/ { # For Drpal >= 7
         try_files $uri @rewrite;
     }
 
