Updated to Debian stable

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,13 +20,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
-[program:php5-fpm]
-command=/usr/sbin/php5-fpm -c /etc/php5/fpm
-stdout_events_enabled=true
-stderr_events_enabled=true
-
-[program:php5-fpm-log]
-command=tail -f /var/log/php5-fpm.log
+[program:php-fpm]
+command=/usr/sbin/php-fpm7.0 -c /etc/php/7.0/fpm
 stdout_events_enabled=true
 stderr_events_enabled=true
 
@@ -42,6 +37,11 @@ stderr_events_enabled=true
 
 [program:ssh]
 command=/usr/sbin/sshd -D
+stdout_events_enabled=true
+stderr_events_enabled=true
+
+[program:php-fpm-log]
+command=tail -f /var/log/php7.0-fpm.log
 stdout_events_enabled=true
 stderr_events_enabled=true
 
