--- a/drupal-site.conf
+++ b/drupal-site.conf
@@ -68,9 +68,9 @@ server {
 #        fastcgi_param SCRIPT_FILENAME $request_filename;
         fastcgi_intercept_errors on;
 
-    		fastcgi_pass unix:/var/run/php5-fpm.sock;
+    		fastcgi_pass unix:/run/php-fpm.sock;
     		fastcgi_index index.php;
-    		include fastcgi_params;
+    		include fastcgi.conf;
     }
 
     # Fighting with Styles? This little gem is amazing.
