--- a/livehelperchat-site.conf
+++ b/livehelperchat-site.conf
@@ -5,10 +5,9 @@ server {
   error_log   /var/log/nginx/error.log;
 
   location ~* (^(?!(?:(?!(php)).)*/(albums|bin|var|lib|cache|doc|settings|pos|modules)/).*?(index\.php|upgrade\.php|testi\.php)$) {
-          include        fastcgi_params;
-          fastcgi_pass unix:/var/run/php5-fpm.sock;
+          include        fastcgi.conf;
+          fastcgi_pass unix:/run/php-fpm.sock;
           fastcgi_param  PATH_INFO          $query_string;
-          fastcgi_param  SCRIPT_FILENAME /wwwroot/current/$fastcgi_script_name;
        }
 
        #Allow hotlinking to normal and thumb size images
