--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "2224:22"
     environment:
       - PLATFORM=drupal
+      - SSH_PUBLIC_KEY="[YOUR KEY]"
     image: citrussolutions/docker-php
     volumes:
       - .:/wwwroot:Z
