--- a/drupal-site.conf
+++ b/drupal-site.conf
@@ -2,7 +2,8 @@ server {
 	listen   8080; ## listen for ipv4; this line is default and implied
 	listen   [::]:8080 default ipv6only=on; ## listen for ipv6
 
-	root /wwwroot/current;
+    # For Citrus projects use /wwwroot/current
+	root /wwwroot/web;
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
