Update to php7.3, fix missing mysql-client package

--- a/drupal-site.conf
+++ b/drupal-site.conf
@@ -2,8 +2,8 @@ server {
 	listen   8080; ## listen for ipv4; this line is default and implied
 	listen   [::]:8080 default ipv6only=on; ## listen for ipv6
 
-    # For Citrus projects use /wwwroot/current
-	root /wwwroot/web;
+    # For KWD projects use /wwwroot/web or make symlink
+	root /wwwroot/current;
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
